Update to jdk 11